[project]
name = "big-data-analytics-applied-data-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dora",
    "mypy>=1.18.1",
    "pandas>=2.3.2",
]

[tool.uv.sources]
dora = { git = "https://github.com/NathanEpstein/Dora.git" }
